# mediwatch_model

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  generate_windows.py  pyproject.toml  run_local.py  runner.py  runner_cleanup.py
.github/workflows/: ci.yml
airflow/: docker-compose.yml
airflow/dags/: acceptance_test_dag.py  pipeline_dag.py
airflow/scripts/: run_acceptance_test.sh  trigger_windows.py
artifacts/evaluations/: eval_model_2006-12-31_on_2007-12-31.json
artifacts/pipelines/: pipeline_2004-12-31.joblib  pipeline_2005-12-31.joblib  pipeline_2006-12-31.joblib  pipeline_2007-12-31.joblib  pipeline_2008-12-31.joblib
artifacts/reports/: drift_2005-12-31.html  drift_2006-12-31.html  drift_2007-12-31.html  drift_2008-12-31.html
docs/: MODEL_CARD.md
notebooks/: Mediwatch_v1.ipynb
scripts/: verify_mlflow_cleanup.py  verify_mlflow_registry.py
src/: config.py  data.py  drift.py  evaluation.py  preprocessing.py  training.py
src/old/evidently/: tabular_report_01.py
tests/: test_evaluation.py  test_pipeline_e2e.py  test_preprocessing.py  test_promotion.py
