[project]
name = "mediwatch-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "apache-airflow>=3.1.7",
    "evidently>=0.4,<0.5",
    "graphviz>=0.21",
    "joblib>=1.5.3",
    "mlflow>=2.0",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
